Bug 1710822 - Copy mIsSrcdocDocument for print clones. r=smaug

So that we correctly avoid choosing about:srcdoc as a base URI.

Differential Revision: https://phabricator.services.mozilla.com/D114989